@startuml Backend Class Diagram
!theme plain

title iHost Backend - Domain Model & Services

package "Entity Models" {
    class User {
        +email: String
        +username: String
        +firstName: String
        +lastName: String
        +photoUrl: String?
        +createdAt: String
        +updatedAt: String
        --
        +validate()
    }

    class Event {
        +title: String
        +description: String
        +eventDate: String
        +eventTime: String
        +location: String
        +creatorUid: String
        +free: Boolean
        +price: Double?
        +shareCode: String
        +createdAt: String
        +updatedAt: String
        --
        +validate()
    }

    class EventUser {
        +eventId: String
        +userId: String
        +status: EventUserStatus
        +role: EventUserRole
        +invitedAt: String
        +respondedAt: String?
    }

    class Friendship {
        +id: String
        +user1Id: String
        +user2Id: String
        +status: FriendshipStatus
        +requestedBy: String
        +requestedAt: String
        +respondedAt: String?
    }

    enum EventUserStatus {
        PENDING
        ACCEPTED
        DECLINED
        CREATOR
    }

    enum EventUserRole {
        CREATOR
        ATTENDEE
    }

    enum FriendshipStatus {
        PENDING
        ACCEPTED
        DECLINED
    }
}

package "DTOs" {
    class CreateUserRequest {
        +uid: String
        +email: String
        +username: String
        +firstName: String
        +lastName: String
        +photoUrl: String?
    }

    class UserResponse {
        +uid: String
        +email: String
        +username: String
        +firstName: String
        +lastName: String
        +photoUrl: String?
        +createdAt: String
        +updatedAt: String
    }

    class CreateEventRequest {
        +title: String
        +description: String
        +eventDate: String
        +eventTime: String
        +location: String
        +free: Boolean
        +price: Double?
    }

    class EventResponse {
        +id: String
        +event: Event
        +userStatus: EventUserStatus?
        +userRole: EventUserRole?
    }

    class PaymentIntentRequest {
        +amount: Int
        +eventId: String
        +userId: String
    }

    class PaymentIntentResponse {
        +paymentIntent: String
        +ephemeralKey: String
        +customer: String
        +publishableKey: String
    }
}

package "Controllers" {
    class UserController <<RestController>> {
        -userService: UserService
        --
        +registerUser(request: CreateUserRequest): UserResponse
        +getUserById(uid: String): UserResponse
        +updateUser(uid: String, request: UpdateUserRequest): UserResponse
        +getAllUsers(): List<UserResponse>
        +isUsernameAvailable(username: String): Map
        +isEmailAvailable(email: String): Map
    }

    class EventController <<RestController>> {
        -eventService: EventService
        --
        +getAllEvents(): List<EventResponse>
        +getEventById(id: String): EventResponse
        +createEvent(request: CreateEventRequest): EventResponse
        +updateEvent(id: String, request: UpdateEventRequest): EventResponse
        +deleteEvent(id: String)
        +getEventByCode(shareCode: String): EventResponse
    }

    class EventUserController <<RestController>> {
        -eventUserService: EventUserService
        --
        +inviteUsers(request: InviteUsersRequest)
        +acceptInvitation(eventUserId: String)
        +declineInvitation(eventUserId: String)
        +getEventAttendees(eventId: String, status: String?): List
        +getMyEvents(status: String?): List
    }

    class FriendshipController <<RestController>> {
        -friendshipService: FriendshipService
        --
        +sendFriendRequest(request: FriendRequestRequest): Friendship
        +acceptFriendRequest(friendshipId: String): Friendship
        +declineFriendRequest(friendshipId: String): Friendship
        +removeFriend(friendshipId: String)
        +getPendingRequests(): List<Friendship>
        +getFriends(): List<Friendship>
        +getSentRequests(): List<Friendship>
    }

    class StripeController <<RestController>> {
        -paymentService: PaymentService
        --
        +createPaymentIntent(request: PaymentIntentRequest): PaymentIntentResponse
        +getPublishableKey(): Map
        +handleWebhook(payload: String, sigHeader: String)
    }

    class ImageUploadController <<RestController>> {
        -imageService: ImageService
        --
        +uploadEventImage(eventId: String, file: MultipartFile): Map
        +uploadProfilePhoto(file: MultipartFile): Map
        +getEventImages(eventId: String): List
        +deleteImage(documentId: String)
    }
}

package "Services" {
    interface UserService {
        +getUserById(uid: String): User
        +createUser(user: User): User
        +updateUser(uid: String, updates: Map): User
        +getAllUsers(): List<User>
        +isUsernameAvailable(username: String): Boolean
        +isEmailAvailable(email: String): Boolean
    }

    interface EventService {
        +getAllEventsForUser(userId: String): List
        +getEventById(eventId: String, userId: String): Map
        +createEvent(event: Event, creatorUid: String): Pair
        +updateEvent(eventId: String, updates: Map, userId: String): Event
        +deleteEvent(eventId: String, userId: String)
        +findEventByShareCode(shareCode: String, userId: String): Map
    }

    interface EventUserService {
        +inviteUsers(eventId: String, userIds: List, inviterId: String)
        +acceptInvitation(eventUserId: String, userId: String): EventUser
        +declineInvitation(eventUserId: String, userId: String): EventUser
        +getEventAttendees(eventId: String, status: String?): List
        +getMyEvents(userId: String, status: String?): List
    }

    interface FriendshipService {
        +sendFriendRequest(fromUserId: String, toUserId: String): Friendship
        +acceptFriendRequest(friendshipId: String, userId: String): Friendship
        +declineFriendRequest(friendshipId: String, userId: String): Friendship
        +removeFriend(friendshipId: String, userId: String)
        +getPendingRequests(userId: String): List<Friendship>
        +getFriends(userId: String): List<Friendship>
        +getSentRequests(userId: String): List<Friendship>
    }

    interface PaymentService {
        +createPaymentIntent(amount: Int, eventId: String, userId: String): PaymentIntentResult
        +getPublishableKey(): String
        +handleWebhook(payload: String, sigHeader: String)
    }

    interface ImageService {
        +uploadEventImage(eventId: String, file: MultipartFile): Map
        +uploadProfilePhoto(userId: String, file: MultipartFile): Map
        +getEventImages(eventId: String): List
        +deleteImage(documentId: String, userId: String)
    }

    interface CloudinaryService {
        +uploadImage(file: MultipartFile): String
        +deleteImage(publicId: String)
    }
}

package "Security" {
    class SecurityConfig {
        +filterChain(http: HttpSecurity): SecurityFilterChain
        +authenticationManager(): AuthenticationManager
    }

    class FirebaseTokenFilter {
        -firebaseAuth: FirebaseAuth
        --
        +doFilterInternal(request, response, chain)
        -extractToken(request): String?
        -verifyToken(token: String): FirebaseToken
    }
}

package "Configuration" {
    class FirebaseConfig {
        +firebaseApp(): FirebaseApp
        +firebaseAuth(): FirebaseAuth
        +firestore(): Firestore
    }

    class StripeConfig {
        +publishableKey: String
        +secretKey: String
        +endpointSecret: String
        --
        +init()
    }

    class CloudinaryConfig {
        +cloudinary(): Cloudinary
    }
}

' Relationships
User "1" -- "0..*" Event : creates >
User "0..*" -- "0..*" Event : attends >
(User, Event) .. EventUser

User "0..*" -- "0..*" User : friends with >
(User, User) .. Friendship

EventUser --> EventUserStatus
EventUser --> EventUserRole
Friendship --> FriendshipStatus

UserController --> UserService
EventController --> EventService
EventUserController --> EventUserService
FriendshipController --> FriendshipService
StripeController --> PaymentService
ImageUploadController --> ImageService

ImageService --> CloudinaryService

UserController ..> CreateUserRequest
UserController ..> UserResponse
EventController ..> CreateEventRequest
EventController ..> EventResponse
StripeController ..> PaymentIntentRequest
StripeController ..> PaymentIntentResponse

SecurityConfig --> FirebaseTokenFilter
FirebaseTokenFilter --> FirebaseConfig

note right of Event
  shareCode format: "IH-XXXXX"
  Generated on creation
end note

note right of EventUser
  Junction table for
  many-to-many relationship
  between Users and Events
end note

note right of FirebaseTokenFilter
  Validates JWT tokens
  from Firebase Auth
  Sets SecurityContext principal
end note

@enduml